--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,7 @@
     --black: #000;
     --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     --transition: all 0.3s ease;
+    --vibrant-accent-color: #00c1d5;
 }
 
 * {
@@ -166,7 +167,7 @@ header .container {
 .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--primary-color);
+    color: var(--vibrant-accent-color);
 }
 
 nav ul {
