--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -71,7 +71,7 @@
   .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--primary);
+    color: var(--vibrant-accent-color);
     text-decoration: none;
   }
   
